--- a/CSS/style.css
+++ b/CSS/style.css
@@ -157,6 +157,10 @@ footer {
     width: 100%;
     margin: 20px auto;
   }
+  .card-Moderate-violet {
+    background-repeat: no-repeat;
+    background-position: top 20px right 10px;
+  }
 
   .card:nth-child(1) {
     grid-column: 1;
